tests/paczka1/fuzzy1/76662753.err
Error in line 15: qbXE83 S588 51,3
Error in line 12: sVFVfepyfq S488 52,4
Error in line 22: qbXE83 S864 96,6
Error in line 29: qbXE83 S488 18,9
Error in line 39: MdE4 A5j1 6,0
